# aeon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.cargo/: config.toml
crates/aeon-cli/: Cargo.toml
crates/aeon-cli/src/: connectors.rs  main.rs
crates/aeon-cli/tests/: cli.rs  cli_compliance.rs
crates/aeon-cluster/: Cargo.toml
crates/aeon-cluster/benches/: cluster_bench.rs
crates/aeon-cluster/src/: config.rs  discovery.rs  lib.rs  log_store.rs  node.rs  partition_driver.rs  partition_manager.rs  raft_config.rs  rebalance.rs  snapshot.rs  store.rs  transfer.rs  types.rs
crates/aeon-cluster/src/transport/: cutover.rs  endpoint.rs  framing.rs  health.rs  mod.rs  network.rs  partition_transfer.rs  poh_transfer.rs  server.rs  throttle.rs  tls.rs  transfer_metrics.rs
crates/aeon-cluster/tests/: cutover.rs  multi_node.rs  partition_transfer_e2e.rs  poh_transfer.rs  raft_log_persistence.rs  single_node.rs
crates/aeon-connectors/: Cargo.toml
crates/aeon-connectors/src/: lib.rs  mtls_pem.rs  push_buffer.rs
crates/aeon-connectors/src/blackhole/: mod.rs
crates/aeon-connectors/src/file/: mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/http/: mod.rs  polling_source.rs  sink.rs  webhook_source.rs
crates/aeon-connectors/src/kafka/: auth.rs  mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/memory/: mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/mongodb_cdc/: auth.rs  mod.rs  mtls_tempfile.rs  source.rs
crates/aeon-connectors/src/mqtt/: mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/mysql_cdc/: auth.rs  mod.rs  source.rs
crates/aeon-connectors/src/nats/: auth.rs  mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/postgres_cdc/: auth.rs  mod.rs  source.rs
crates/aeon-connectors/src/quic/: mod.rs  sink.rs  source.rs  tls.rs
crates/aeon-connectors/src/rabbitmq/: mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/redis_streams/: auth.rs  mod.rs  sink.rs  source.rs
crates/aeon-connectors/src/stdout/: mod.rs
crates/aeon-connectors/src/websocket/: mod.rs  mtls.rs  sink.rs  source.rs
crates/aeon-connectors/src/webtransport/: datagram_source.rs  mod.rs  mtls.rs  sink.rs  source.rs
crates/aeon-engine/: Cargo.toml
crates/aeon-engine/benches/: blackhole_bench.rs  e2e_delivery_bench.rs  eo2_durability_bench.rs  gate1_steady_state.rs  gate1_validation.rs  kafka_sink_isolation.rs  kafka_source_isolation.rs  large_message_bench.rs  multi_partition_blackhole_bench.rs  partition_scaling_bench.rs  pipeline_components_bench.rs  redpanda_bench.rs  transport_bench.rs
crates/aeon-engine/src/: affinity.rs  batch_tuner.rs  batch_wire.rs  checkpoint.rs  circuit_breaker.rs  cluster_applier.rs  compliance_validator.rs  connector_registry.rs  dag.rs  debug_fault.rs  delivery.rs  delivery_ledger.rs  dlq.rs  encryption_probe.rs  engine_cutover.rs  engine_providers.rs  eo2.rs  eo2_backpressure.rs  eo2_content_hash.rs  eo2_metrics.rs  eo2_recovery.rs  erasure_policy.rs  erasure_probe.rs  erasure_store.rs  health.rs  identity_store.rs  l2_body.rs  l2_transfer.rs  lib.rs  metrics_server.rs  native_loader.rs  partition_install.rs  partition_ownership.rs  pipeline.rs  pipeline_manager.rs  pipeline_supervisor.rs  poh_probe.rs  processor.rs  processor_auth.rs  registry.rs  (+6 more)
crates/aeon-engine/src/transport/: in_process.rs  mod.rs  session.rs  websocket_host.rs  webtransport_host.rs
crates/aeon-engine/tests/: backpressure.rs  chaos_test.rs  checkpoint_statestore.rs  e2e_tier_a.rs  e2e_tier_b.rs  e2e_tier_c.rs  e2e_tier_d.rs  e2e_tier_e.rs  e2e_tier_f.rs  e2e_tier_g.rs  e2e_tier_h.rs  e2e_wasm_passthrough.wat  e2e_ws_harness.rs  e2e_wt_harness.rs  eo2_integration.rs  pipeline_supervisor_integration.rs  redpanda_integration.rs  sustained_load.rs
crates/aeon-io/: Cargo.toml
crates/aeon-io/src/: lib.rs
crates/aeon-native-sdk/: Cargo.toml
crates/aeon-native-sdk/src/: lib.rs  wire.rs
crates/aeon-observability/: Cargo.toml
crates/aeon-observability/src/: audit.rs  histogram.rs  lib.rs  logging.rs  metrics.rs  otel.rs  tracing_spans.rs
crates/aeon-processor-client/: Cargo.toml
crates/aeon-processor-client/src/: auth.rs  lib.rs  websocket.rs  webtransport.rs  wire.rs
crates/aeon-secrets/: Cargo.toml
crates/aeon-secrets/src/: builder.rs  config.rs  error.rs  kek_registry.rs  lib.rs
crates/aeon-secrets/src/backends/: mod.rs
crates/aeon-state/: Cargo.toml
crates/aeon-state/benches/: state_bench.rs
crates/aeon-state/src/: l1.rs  l2.rs  l3.rs  l3_encrypted.rs  lib.rs  tiered.rs  typed.rs  window.rs
crates/aeon-types/: Cargo.toml
crates/aeon-types/benches/: event_bench.rs  scanner_bench.rs  uuid_bench.rs
crates/aeon-types/src/: audit.rs  awpp.rs  backoff.rs  compliance.rs  consumer_mode.rs  delivery.rs  durability.rs  encryption.rs  erasure.rs  error.rs  event.rs  event_time.rs  interner.rs  l2_transfer.rs  lib.rs  manifest.rs  oauth.rs  partition.rs  poh.rs  processor_identity.rs  processor_transport.rs  redact.rs  registry.rs  retention.rs  scanner.rs  secrets.rs  ssrf.rs  state.rs  subject_id.rs  traits.rs  transport_codec.rs  uuid.rs
crates/aeon-types/src/auth/: hmac_sig.rs  inbound.rs  mod.rs  outbound.rs
crates/aeon-wasm/: Cargo.toml
crates/aeon-wasm-sdk/: Cargo.toml
crates/aeon-wasm-sdk/src/: clock.rs  host.rs  lib.rs  log.rs  metrics.rs  state.rs  wire.rs
crates/aeon-wasm/benches/: wasm_bench.rs
crates/aeon-wasm/src/: lib.rs  processor.rs  runtime.rs
crates/aeon-wasm/wit/: processor.wit
samples/e2e-pipeline/: Cargo.toml
samples/e2e-pipeline/src/: pipeline.rs  producer.rs
samples/processors/rust-native/: Cargo.toml
samples/processors/rust-native-cdylib/: Cargo.toml
samples/processors/rust-native-cdylib/src/: lib.rs
samples/processors/rust-native/benches/: multi_runtime.rs
samples/processors/rust-wasm-sdk/: Cargo.toml
sdks/c/: CMakeLists.txt  build.sh  build_msvc.bat
sdks/c/include/: aeon_processor.h
sdks/c/src/: aeon_processor.c  passthrough_processor.c  passthrough_wasm.c
sdks/c/test/: test_aeon.c
(+304 files in other folders)
