[package]
name = "aeon-cli"
description = "CLI binary entrypoint for Aeon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-cli"
keywords = ["stream-processing", "cli", "pipeline", "devops"]
categories = ["command-line-utilities"]

[[bin]]
name = "aeon"
path = "src/main.rs"

[features]
default = ["native-validate", "processor-auth"]
native-validate = ["aeon-engine/native-loader"]
# V5.1 R1: passthrough — aeon-engine ships processor-auth in its defaults,
# but aeon-cli must declare its own copy so cfg gates inside aeon-cli code
# (e.g. cmd_serve's `set_secret_registry` install) can detect when the
# transitive feature is actually compiled in. Without this passthrough the
# cfg always evaluates false and the install would silently no-op.
processor-auth = ["aeon-engine/processor-auth"]
rest-api = ["aeon-engine/rest-api", "aeon-engine/cluster", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:dashmap", "dep:notify", "dep:aeon-wasm", "dep:aeon-connectors", "dep:uuid", "dep:bytes", "dep:aeon-cluster", "dep:aeon-state"]

[dependencies]
aeon-types = { workspace = true }
aeon-engine = { workspace = true }
aeon-crypto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
ureq = { version = "2", features = ["json"] }
hex = { workspace = true }
wasmtime = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
dashmap = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
aeon-wasm = { workspace = true, optional = true }
aeon-connectors = { workspace = true, optional = true, features = [
    "kafka",
    "http",
    "file",
    # P5.c — broader connector set so the aeon-cli binary can load
    # manifests referencing WebSocket / Redis Streams / NATS / Postgres-CDC /
    # MySQL-CDC / MongoDB-CDC source+sink types. Each of these uses S10
    # mTLS / broker-native auth wiring closed 2026-04-24.
    "websocket",
    "redis-streams",
    "nats",
    "postgres-cdc",
    "mysql-cdc",
    "mongodb-cdc",
] }
uuid = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
aeon-cluster = { workspace = true, features = ["auto-tls"], optional = true }
# M2 — L3 RedbStore for the supervisor's checkpoint backend.
# `cmd_serve` opens a redb file at $artifact_dir/l3-checkpoints.redb and
# installs it onto PipelineSupervisor::set_l3_checkpoint_store, which the
# build_sink_task_ctx then consumes when a manifest declares
# `durability.checkpoint.backend: state_store`. Without this, the
# StateStore path silently no-ops and `aeon_pipeline_checkpoints_written_total`
# stays at 0 forever even though the L2 body store grows on disk.
aeon-state = { workspace = true, optional = true, features = ["redb"] }
ipnet = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
