[package]
name = "aeon-connectors"
description = "Source and Sink connector implementations for Aeon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aeon-types = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Optional: always needed for async connectors
tokio = { workspace = true, optional = true }

# Optional: Kafka / Redpanda
rdkafka = { workspace = true, optional = true }

# Optional: WebSocket
futures-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

# Optional: HTTP (webhook + polling)
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# Optional: Redis Streams
redis = { workspace = true, optional = true }

# Optional: NATS / JetStream
async-nats = { workspace = true, optional = true }

# Optional: MQTT
rumqttc = { workspace = true, optional = true }

# Optional: RabbitMQ / AMQP
lapin = { workspace = true, optional = true }

# Optional: QUIC raw + WebTransport
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
wtransport = { workspace = true, optional = true }

# Optional: CDC connectors
tokio-postgres = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rdkafka = { workspace = true }
tempfile = "3"

[features]
default = ["memory", "blackhole", "stdout"]
memory = []
blackhole = []
stdout = []
kafka = ["dep:rdkafka", "dep:tokio", "dep:futures-util"]
file = ["dep:tokio"]
websocket = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio"]
http = ["dep:axum", "dep:reqwest", "dep:tokio"]
redis-streams = ["dep:redis", "dep:tokio"]
nats = ["dep:async-nats", "dep:futures-util", "dep:tokio"]
mqtt = ["dep:rumqttc", "dep:tokio"]
rabbitmq = ["dep:lapin", "dep:futures-util", "dep:tokio"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio", "dep:futures-util"]
webtransport = ["dep:wtransport", "dep:tokio", "dep:futures-util"]
postgres-cdc = ["dep:tokio-postgres", "dep:tokio", "dep:serde", "dep:serde_json"]
mysql-cdc = ["dep:mysql_async", "dep:tokio", "dep:serde", "dep:serde_json"]
mongodb-cdc = ["dep:mongodb", "dep:tokio", "dep:futures-util", "dep:serde", "dep:serde_json"]
