[package]
name = "aeon-connectors"
description = "Source and Sink connector implementations for Aeon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-connectors"
keywords = ["kafka", "redpanda", "nats", "mqtt", "connector"]
categories = ["asynchronous", "network-programming"]

[dependencies]
aeon-types = { workspace = true }
# S2.5 audit — inbound-auth rejections are emitted to the process-wide
# audit sink (stderr JSON + future SIEM pushers).
aeon-observability = { path = "../aeon-observability" }
bytes = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Optional: always needed for async connectors
tokio = { workspace = true, optional = true }

# Optional: Kafka / Redpanda
rdkafka = { workspace = true, optional = true }

# Optional: WebSocket
futures-util = { workspace = true, optional = true }
# `rustls-tls-webpki-roots` enables the rustls backend + webpki-roots
# trust store — required for the `Connector::Rustls(...)` path used by
# S10 mTLS outbound and S9 mTLS inbound on wss://.
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-webpki-roots"] }
# Parse the mTLS cert/key PEMs carried by OutboundAuthSigner into rustls
# types. Only the websocket (+ future webtransport-mtls) path uses this.
rustls-pemfile = { workspace = true, optional = true }
# Static public CA trust store for verifying the remote server on
# wss:// mTLS outbound. Private-CA server verification would need a
# separate ConnectorTlsConfig (not in scope for #34).
webpki-roots = { workspace = true, optional = true }
# Subject (CN + SAN) extractor used by mTLS server-side verification.
aeon-crypto = { workspace = true, optional = true }

# Optional: HTTP (webhook + polling)
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# Optional: Redis Streams
redis = { workspace = true, optional = true }

# Optional: NATS / JetStream
async-nats = { workspace = true, optional = true }

# Optional: MQTT
rumqttc = { workspace = true, optional = true }

# Optional: RabbitMQ / AMQP
lapin = { workspace = true, optional = true }

# Optional: QUIC raw + WebTransport
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
wtransport = { workspace = true, optional = true }

# Optional: CDC connectors
tokio-postgres = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }

# Secure tempfile for Mongo CDC mTLS (the mongodb crate's TlsOptions only
# accepts a file path, not inline PEM). We write the signer-held cert+key
# to a process-owned tempfile with 0600 perms that drops with the source,
# best-effort zeroising the bytes before unlink.
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rdkafka = { workspace = true }
tempfile = "3"
# Fixture certs for websocket / webtransport mTLS tests.
rcgen = { workspace = true }

[features]
default = ["memory", "blackhole", "stdout"]
memory = []
blackhole = []
stdout = []
kafka = ["dep:rdkafka", "dep:tokio", "dep:futures-util"]
file = ["dep:tokio"]
websocket = [
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:tokio",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:aeon-crypto",
]
http = ["dep:axum", "dep:reqwest", "dep:tokio"]
redis-streams = ["dep:redis", "dep:tokio"]
nats = [
    "dep:async-nats",
    "dep:futures-util",
    "dep:tokio",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
]
mqtt = ["dep:rumqttc", "dep:tokio"]
rabbitmq = ["dep:lapin", "dep:futures-util", "dep:tokio"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio", "dep:futures-util"]
webtransport = [
    "dep:wtransport",
    "dep:tokio",
    "dep:futures-util",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
    "dep:aeon-crypto",
]
postgres-cdc = [
    "dep:tokio-postgres",
    "dep:tokio-postgres-rustls",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:webpki-roots",
]
mysql-cdc = ["dep:mysql_async", "dep:tokio", "dep:serde", "dep:serde_json"]
mongodb-cdc = [
    "dep:mongodb",
    "dep:tokio",
    "dep:futures-util",
    "dep:serde",
    "dep:serde_json",
    "dep:tempfile",
]
