[package]
name = "aeon-engine"
description = "Pipeline orchestrator and SPSC wiring for Aeon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-engine"
keywords = ["stream-processing", "pipeline", "orchestration", "spsc"]
categories = ["concurrency", "asynchronous"]

[features]
default = ["native-loader", "rest-api", "processor-auth", "websocket-host"]
native-loader = ["libloading", "aeon-native-sdk", "sha2", "hex"]
rest-api = ["axum", "tower-http", "sha2", "hex", "aeon-wasm"]
processor-auth = ["aeon-crypto", "rand", "sha2", "hex", "base64"]
webtransport-host = ["wtransport", "rustls", "processor-auth"]
websocket-host = ["processor-auth", "rest-api", "axum/ws"]
cluster = ["aeon-cluster"]

[dependencies]
aeon-types = { workspace = true }
bytes = { workspace = true }
rtrb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
core_affinity = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
serde_json = { workspace = true }

# EO-2 P10: xxhash3_64 for content-hash dedup (see eo2_content_hash.rs)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Wasm processor loading (feature-gated behind rest-api for hot-swap)
aeon-wasm = { workspace = true, optional = true }

# Native .so processor loading (feature-gated)
libloading = { version = "0.8", optional = true }
aeon-native-sdk = { workspace = true, optional = true }

# Cluster state for REST API status endpoint (feature-gated)
aeon-cluster = { workspace = true, optional = true, features = ["cluster"] }

# Processor identity / challenge-response auth (feature-gated)
aeon-crypto = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }

# REST API (feature-gated)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Integrity verification for native processors (feature-gated)
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

# T3 WebTransport processor host (feature-gated)
wtransport = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# T4 WebSocket uses axum (via rest-api feature) — no extra deps needed

[dev-dependencies]
aeon-connectors = { workspace = true, features = ["kafka", "file", "http", "websocket", "redis-streams", "nats", "rabbitmq", "mqtt", "quic", "webtransport", "postgres-cdc", "mysql-cdc", "mongodb-cdc"] }
aeon-observability = { path = "../aeon-observability" }
aeon-wasm = { workspace = true }
tempfile = "3"
aeon-state = { workspace = true, features = ["redb"] }
criterion = { workspace = true }
rdkafka = { workspace = true }
uuid = { workspace = true }
smallvec = { workspace = true }
sysinfo = "0.33"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = "0.5"
axum = { workspace = true }
serde = { workspace = true }
aeon-processor-client = { workspace = true, features = ["webtransport-insecure"] }
tracing-subscriber = { workspace = true }
aeon-crypto = { workspace = true }
tokio-tungstenite = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
futures-util = { workspace = true }
quinn = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
wtransport = { workspace = true }
async-nats = { workspace = true }
lapin = { workspace = true }
tokio-postgres = { workspace = true }
mysql_async = { workspace = true }
mongodb = { workspace = true }

[[bench]]
name = "blackhole_bench"
harness = false

[[bench]]
name = "redpanda_bench"
harness = false

[[bench]]
name = "pipeline_components_bench"
harness = false

[[bench]]
name = "partition_scaling_bench"
harness = false

[[bench]]
name = "multi_partition_blackhole_bench"
harness = false

[[bench]]
name = "e2e_delivery_bench"
harness = false

[[bench]]
name = "transport_bench"
harness = false

[[bench]]
name = "gate1_validation"
harness = false

[[bench]]
name = "kafka_source_isolation"
harness = false

[[bench]]
name = "kafka_sink_isolation"
harness = false

[[bench]]
name = "large_message_bench"
harness = false

[[bench]]
name = "gate1_steady_state"
harness = false

[[bench]]
name = "eo2_durability_bench"
harness = false
