[package]
name = "aeon-native-sdk"
description = "SDK for building native .so/.dll Aeon processors with C-ABI exports"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-native-sdk"
keywords = ["ffi", "processor", "sdk", "stream-processing", "native"]
categories = ["api-bindings"]

[dependencies]
aeon-types = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
