[package]
name = "aeon-observability"
description = "Vendor-neutral observability for Aeon — stdout, OTLP, Prometheus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-observability"
keywords = ["opentelemetry", "tracing", "metrics", "observability"]
categories = ["development-tools::profiling"]

[features]
default = []
otlp = [
    "tracing-opentelemetry",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
]

[dependencies]
aeon-types = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry (feature-gated)
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
