[package]
name = "aeon-secrets"
description = "Adapter crate for Aeon secret and KEK provider backends (Vault, OpenBao, AWS KMS, AWS Secrets Manager, GCP KMS, Azure Key Vault)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-secrets"
keywords = ["secrets", "vault", "kms", "secret-manager", "aeon"]
categories = ["cryptography"]

[features]
default = []

# HashiCorp Vault KV-v2 + Transit engines. OpenBao is API-compatible and
# ships under the same feature — one adapter serves both.
vault = ["dep:reqwest", "dep:serde_json", "dep:base64", "dep:tokio"]

# Backend features reserved for follow-up implementations. They exist in
# the public config enum today so YAML schemas stabilize early, but
# compiling with any of them currently produces a build error — wiring
# is in follow-up tasks (see aeon-secrets/src/builder.rs for the gate).
aws-sm = []
aws-kms = []
gcp-kms = []
azure-kv = []

[dependencies]
aeon-types = { workspace = true }
aeon-crypto = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Feature-gated. `blocking` + `json` get unioned with the workspace
# dep's `rustls-tls` feature — KV-v2 reads are startup-only (never on
# the hot path), so a synchronous HTTP client keeps SecretProvider's
# sync trait contract intact.
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
serde_json = { workspace = true, optional = true }
# Vault Transit ships plaintext DEKs base64-encoded; base64-encodes the
# wire-side ciphertext too. Used only by the Transit adapter.
base64 = { workspace = true, optional = true }
# Transit runs on an async tokio runtime (KekProvider is async); we need
# `tokio::time::sleep` for the retry backoff. KV-v2 is sync and uses
# `std::thread::sleep`, no runtime required.
tokio = { workspace = true, optional = true, features = ["time"] }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
mockito = "1"
